[package]
name = "solana-leaders-tpu"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/fanatid/solana-leaders-tpu/"
publish = false
resolver = "2"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
solana-client = "1.18.3"
solana-sdk = "1.18.3"
tokio = { version = "1.36.0", feautres = ["macros", "rt-multi-thread"] }

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
codegen-units = 1
lto = true
